tests/sumo/basic/tls/NEMA/errors/1/output.sumo
Loading net-file from 'net.net.xml' ... done (6ms).
Loading additional-files from 'input_additional.add.xml' ... 
Loading of additional-files failed.
